Introducing DB-Connection

--- a/LeaderboardService.WebApp/appsettings.json
+++ b/LeaderboardService.WebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "server=SRVVM; database=DK_N_LB; Integrated Security=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
