--- a/DataAccess.Repository/DataAccess.Repository.csproj
+++ b/DataAccess.Repository/DataAccess.Repository.csproj
@@ -6,6 +6,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess.Model\DataAccess.Model.csproj" />
   </ItemGroup>
 
 </Project>
