--- a/LeaderboardService.Business/LeaderboardService.Business.csproj
+++ b/LeaderboardService.Business/LeaderboardService.Business.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess.Repository\DataAccess.Repository.csproj" />
     <ProjectReference Include="..\DataTransfer.Dto\DataTransfer.Dto.csproj" />
   </ItemGroup>
 
