Replace escaped characters in json

--- a/DataTransfer.Dto/DataTransfer.Dto.csproj
+++ b/DataTransfer.Dto/DataTransfer.Dto.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataAccess.Entity\DataAccess.Entity.csproj" />
+    <ProjectReference Include="..\Framework\Framework.csproj" />
   </ItemGroup>
 
 </Project>
